syntax = "proto3";

package protocol;

option go_package = "github.com/rudransh-shrivastava/peer-it/internal/shared/protocol";

message NetworkMessage {
    oneof message_type {
        AnnounceMessage announce = 1;
        PeerListRequest peer_list_request = 2;
        PeerListResponse peer_list_response = 3;
        ChunkRequest chunk_request = 4;
        ChunkResponse chunk_response = 5;
        HeartbeatMessage heartbeat = 6;
        IntroductionMessage introduction = 7;
        GoodbyeMessage goodbye = 8;
        RegisterMessage register = 9;
    }
}

message RegisterMessage {
    string listen_port = 1;
}

message PeerInfo {
    string ip_address = 1;
    string port = 2;
}

message FileInfo {
    string file_hash = 1;
    int64 file_size = 2;
    int32 total_chunks = 3;
    int32 chunk_size = 4;
}

message AnnounceMessage {
    repeated FileInfo files = 1;
}

message PeerListRequest {
    string file_hash = 1;
}

message PeerListResponse {
    string file_hash = 1;
    int32 total_chunks = 2;
    int32 chunk_size = 3;
    repeated PeerInfo peers = 4;
}

message ChunkRequest {
    string file_hash = 1;
    int32 chunk_index = 2;
    string chunk_hash = 3;
}

message ChunkResponse {
    string file_hash = 1;
    int32 chunk_index = 2;
    bytes chunk_data = 3;
    string chunk_hash = 4;
}

message HeartbeatMessage {
    int64 timestamp = 1;
}

// chunks_map: Vector of 0's and 1's signifying which chunks the peer has according to the index
message IntroductionMessage {
    string file_hash = 3;
    repeated int32 chunks_map = 4;
}

// No fields are required for this message
// If recieved by anyone, delete that peer from the peer list
message GoodbyeMessage {}